2005-01-16  Per Bothner  <per@bothner.com>

	* kawa/standard/require.java (makeDeclInModule): Clear the value
	of the imported decl if it isn't constant.

2005-01-12  Per Bothner  <per@bothner.com>

	* kawa/lang/Translator.java (namespaceResolve(String)): Don't look
	for class matching prefix here.
	(namespaceResolve(String,boolean)): If JAVA2, look for class matching
	prefix without initializing the class.

	* kawa/lang/Translator.java (makeBody): Don't make AppendValues call
	here since it causes Scheme begin at top-level to mis-behave.

2005-01-10  Per Bothner  <per@bothner.com>

	* config.guess: Update to newer version, from libtool 1.5.10.
	* config.sub: Likewise.
	* ltmain.sh: Update to libtool 1.5.10.

	* configure.in: More little fixes and updates.

	* configure.in: Ran autoupdate over file to update to current autoconf
	syntax, followed by some manual fixups of AC_CONFIG_LINK.

	* Makefile.am (select-java1, select-java2, select-java5): Fix sed
	pattern to work with BSD sed (as on OS X) as well as GNU sed.

2005-01-08  Per Bothner  <per@bothner.com>

	* build.xml (build-tools): Also compile gnu/kawa/util/PreProcess.java.
	(select-java1, select-java2, select-java5): Rewrite to use PreProcess.

	* kawa/lang/Macro.java (setExpander): Remove unused field.
	* kawa/standard/define_syntax.java (setExpanderMethod): Likewise.

	* kawa/standard/define_syntax.java (makeHygienic, makeNonHygienic):
	New Procedure fields replace makeMethod, makeNonHygienicMethod.
	(scanForm): New new fields.

	* kawa/standard/define_syntax.java (scanForm): Use new ThisExp
	factory method makeGivingContext so we can eval this ApplyExp
	in the current Compilation.  This fixes Savannah bug #11508.

	* kawa/standard/require.java (importDefinitions): If immediate
	note the instance value as a constant.  Don't compile a dofind call.

2005-01-07  Per Bothner  <per@bothner.com>

	* Makefile.am (patch-source-list): Filter with sed out initial "./".