@@ -1,0 +1,1 @@
+Main-Class: gnu.bytecode.dump
